fixed overflow issues

--- a/css/tablet-style.css
+++ b/css/tablet-style.css
@@ -16,7 +16,7 @@
 
 #services {
     flex-direction: column;
-    overflow: hidden;
+
 }
 
 
